Fix red text flickering on hover in new shop UI (Webkit/Blink)

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -529,6 +529,11 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	margin-top: calc(281px - 2.5em) !important;
 }
 
+#story-caption {
+	-webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
 .nostyle {
 	list-style: none;
 }
